<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/igvBackMain3"
            android:layout_width="43dp"
            android:layout_height="39dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/Registername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:text="@string/RegisterGame"
            android:textColor="#CF4137"
            android:textSize="35sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/Registerusername"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/Username"
            android:gravity="center_vertical"
            android:layout_marginTop="50dp"
            android:singleLine="true"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/RegisterPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textSize="20dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btmRegisterStartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_startgame"
            android:text="@string/register"
            android:textColor="#F3E6E6"
            android:textSize="23sp" />
    </LinearLayout>




</LinearLayout>